@@ -6,13 +6,13 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>426</width>
-    <height>215</height>
+    <width>378</width>
+    <height>239</height>
    </rect>
   </property>
-  <layout class="QVBoxLayout">
+  <layout class="QVBoxLayout" name="verticalLayout">
    <property name="margin">
-    <number>3</number>
+    <number>5</number>
    </property>
    <item>
     <layout class="QHBoxLayout">
@@ -52,42 +52,76 @@
     </widget>
    </item>
    <item>
-    <widget class="QGroupBox" name="grbRoom">
+    <layout class="QHBoxLayout" name="horizontalLayout">
+     <item>
+      <widget class="QLabel" name="lblHistory">
+       <property name="text">
+        <string>History:</string>
+       </property>
+       <property name="textFormat">
+        <enum>Qt::PlainText</enum>
+       </property>
+       <property name="buddy">
+        <cstring>cmbHistory</cstring>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <widget class="QComboBox" name="cmbHistory">
+       <property name="sizePolicy">
+        <sizepolicy hsizetype="Expanding" vsizetype="Fixed">
+         <horstretch>0</horstretch>
+         <verstretch>0</verstretch>
+        </sizepolicy>
+       </property>
+       <property name="sizeAdjustPolicy">
+        <enum>QComboBox::AdjustToMinimumContentsLength</enum>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <widget class="QToolButton" name="tlbDeleteHistory">
+       <property name="text">
+        <string>Delete</string>
+       </property>
+       <property name="autoRaise">
+        <bool>true</bool>
+       </property>
+      </widget>
+     </item>
+    </layout>
+   </item>
+   <item>
+    <widget class="QGroupBox" name="grbConference">
      <property name="title">
-      <string>Room</string>
+      <string>Conference Parameters</string>
      </property>
-     <layout class="QGridLayout">
+     <layout class="QGridLayout" name="gridLayout">
       <item row="0" column="0">
-       <widget class="QLabel" name="lblHost">
-        <property name="text">
-         <string>Host:</string>
-        </property>
-        <property name="textFormat">
-         <enum>Qt::PlainText</enum>
-        </property>
-        <property name="buddy">
-         <cstring>lneHost</cstring>
-        </property>
-       </widget>
-      </item>
-      <item row="0" column="1" colspan="2">
-       <widget class="QLineEdit" name="lneHost"/>
-      </item>
-      <item row="1" column="0">
        <widget class="QLabel" name="lblRoom">
         <property name="text">
          <string>Room:</string>
         </property>
+       </widget>
+      </item>
+      <item row="0" column="1" colspan="2">
+       <widget class="QLineEdit" name="lneRoom"/>
+      </item>
+      <item row="1" column="0">
+       <widget class="QLabel" name="lblService">
+        <property name="text">
+         <string>Service:</string>
+        </property>
         <property name="textFormat">
          <enum>Qt::PlainText</enum>
         </property>
         <property name="buddy">
-         <cstring>lneRoom</cstring>
+         <cstring>lneService</cstring>
         </property>
        </widget>
       </item>
       <item row="1" column="1" colspan="2">
-       <widget class="QLineEdit" name="lneRoom"/>
+       <widget class="QLineEdit" name="lneService"/>
       </item>
       <item row="2" column="0">
        <widget class="QLabel" name="lblNick">
@@ -104,6 +138,22 @@
       </item>
       <item row="2" column="1">
        <widget class="QLineEdit" name="lneNick"/>
+      </item>
+      <item row="2" column="2">
+       <widget class="QToolButton" name="tlbResolveNick">
+        <property name="sizePolicy">
+         <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
+          <horstretch>0</horstretch>
+          <verstretch>0</verstretch>
+         </sizepolicy>
+        </property>
+        <property name="text">
+         <string>Resolve</string>
+        </property>
+        <property name="autoRaise">
+         <bool>true</bool>
+        </property>
+       </widget>
       </item>
       <item row="3" column="0">
        <widget class="QLabel" name="lblPassword">
@@ -125,21 +175,7 @@
         </property>
        </widget>
       </item>
-      <item row="2" column="2">
-       <widget class="QToolButton" name="tlbResolveNick">
-        <property name="text">
-         <string>Resolve</string>
-        </property>
-       </widget>
-      </item>
      </layout>
-    </widget>
-   </item>
-   <item>
-    <widget class="Line" name="lineHorizontal">
-     <property name="orientation">
-      <enum>Qt::Horizontal</enum>
-     </property>
     </widget>
    </item>
    <item>
@@ -154,9 +190,10 @@
  <layoutdefault spacing="6" margin="11"/>
  <tabstops>
   <tabstop>cmbStreamJid</tabstop>
-  <tabstop>lneHost</tabstop>
-  <tabstop>lneRoom</tabstop>
+  <tabstop>cmbHistory</tabstop>
+  <tabstop>lneService</tabstop>
   <tabstop>lneNick</tabstop>
+  <tabstop>tlbResolveNick</tabstop>
   <tabstop>lnePassword</tabstop>
   <tabstop>btbButtons</tabstop>
  </tabstops>
@@ -169,8 +206,8 @@
    <slot>reject()</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>356</x>
-     <y>183</y>
+     <x>359</x>
+     <y>299</y>
     </hint>
     <hint type="destinationlabel">
      <x>380</x>
